# dcora

./: .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  package.xml
cmake/: DCORAConfig.cmake.in  DiCORAConfig.cmake.in
data/: pose_graph_optimization_test_2d.g2o  pose_graph_optimization_test_3d.g2o  pyfg_se2_test_data.pyfg  pyfg_se3_test_data.pyfg  range_aided_slam_test_2d.pyfg  range_aided_slam_test_3d.pyfg  tiers.pyfg
examples/: ChordalInitializationExample.cpp  MultiRobotExample.cpp  MultiRobotExample_RASLAM.cpp  SingleRobotExample.cpp  SingleRobotExample_RASLAM.cpp  SingleRobotGNCExample.cpp
include/DCORA/: Agent.h  CORAAgent.h  CORALogger.h  DCORA_robust.h  DCORA_solver.h  DCORA_types.h  DCORA_utils.h  Graph.h  Logger.h  Measurements.h  PoseGraph.h  QuadraticOptimizer.h  QuadraticProblem.h  RelativeMeasurement.h  RelativeSEMeasurement.h
include/DPGO/: DPGO_utils.h
include/DiCORA/: DiCORA_robust.h  DiCORA_solver.h  DiCORA_types.h  DiCORA_utils.h  PGOAgent.h  PGOLogger.h  PoseGraph.h  QuadraticOptimizer.h  (+2 more)
src/: Agent.cpp  CORAAgent.cpp  CORALogger.cpp  DCORA_robust.cpp  DCORA_solver.cpp  DCORA_utils.cpp  DPGO_utils.cpp  DiCORA_robust.cpp  DiCORA_solver.cpp  DiCORA_utils.cpp  Graph.cpp  Graphs.cpp  Logger.cpp  PGOAgent.cpp  PGOLogger.cpp  PoseGraph.cpp  QuadraticOptimizer.cpp  QuadraticProblem.cpp
tests/: testAgent.cpp  testCORA.cpp  testConstruction.cpp  testEigenMap.cpp  testElements.cpp  testLineGraph.cpp  testManifold.cpp  testMeasurements.cpp  testOptimizationThread.cpp  testPGO.cpp  testPoses.cpp  testTriangleGraph.cpp  testUtils.cpp
(+36 files in other folders)
