<?xml version="1.0"?>
<package format="2">
  <name>dicora</name>
  <version>0.0.1</version>
  <description>DiCORA</description>

  <maintainer email="adthoms@ucla.edu">Alexander Thoms</maintainer>
  <maintainer email="apapalia@mit.edu">Alan Papalia</maintainer>
  <license>MIT</license>

  <buildtool_depend>cmake</buildtool_depend>
  <export>
    <!-- Specify that this is not really a catkin package-->
    <build_type>cmake</build_type>
  </export>
</package>